Validatie- en weergave-attributen toegevoegd aan Animal, Category, Enclosure en Zoo.

--- a/Dierentuin42/Views/Enclosures/Details.cshtml
+++ b/Dierentuin42/Views/Enclosures/Details.cshtml
@@ -17,7 +17,7 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class="col-sm-2">
-            Dieren:
+            Dieren in dit verblijf
         </dt>
         <dd class="col-sm-10">
             <ul>
