--- a/Dierentuin42/Views/Enclosures/Edit.cshtml
+++ b/Dierentuin42/Views/Enclosures/Edit.cshtml
@@ -19,7 +19,7 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label for="SelectedAnimalIds">Select Animals</label>
+                <label asp-for="Animals" class="control-label"></label>
                 <select id="SelectedAnimalIds" name="selectedAnimalIds" multiple class="form-control">
                     @foreach (var animal in ViewBag.AvailableAnimals)
                     {
