Opmaak (front-end) Dierentuinen compleet, kleine functionaliteiten verbeterd en extra zoekfunctie geimplementeerd. Front-end is voorzien van mooie hovers, kleuren, iconen en structuur

--- a/Dierentuin42/Views/Categories/Index.cshtml
+++ b/Dierentuin42/Views/Categories/Index.cshtml
@@ -32,9 +32,9 @@
                 <thead class="thead-dark">
                     <tr>
                         <th scope="col">
-                            Naam
+                            Categorie
                             <select class="form-control form-control-sm" name="filterName">
-                                <option value="">Filter op Naam</option>
+                                <option value="">Filter op Categorie</option>
                                 @foreach (var item in ViewData["CategoryNames"] as List<string>)
                                 {
                                     <option value="@item">@item</option>
