Zoeken/filteren op alle eigenschappen functionaliteit geimplementeerd voor Enclosures en front-end/opmaak geimplementeerd voor Index.cshtml + kleine extra functionaliteit aanpassingen in onderliggende items

--- a/Dierentuin42/Views/Zoos/Index.cshtml
+++ b/Dierentuin42/Views/Zoos/Index.cshtml
@@ -19,7 +19,7 @@
         <div class="row mb-4">
             <!-- ZOEK BALK -->
             <div class="col-md-10">
-                <input type="text" class="form-control" name="searchText" placeholder="Zoek op naam..." value="@Context.Request.Query["searchText"]">
+                <input type="text" class="form-control" name="searchText" placeholder="Zoek op dierentuin..." value="@Context.Request.Query["searchText"]">
             </div>
             <div class="col-md-2">
                 <button type="submit" class="btn btn-primary w-100">Zoeken</button>
