SpaceRequirement werkt nu naar behoren, volgende stap: Dier kan alleen toegewezen worden aan verblijf zodra ruimtevereiste past in de beschikbare ruimte in verblijf

--- a/Dierentuin42/Views/Animals/Delete.cshtml
+++ b/Dierentuin42/Views/Animals/Delete.cshtml
@@ -53,6 +53,10 @@
                             <td>@Html.DisplayFor(model => model.Enclosure.Name)</td>
                         </tr>
                         <tr>
+                            <td class="fw-bold">@Html.DisplayNameFor(model => model.spaceRequirement)</td>
+                            <td>@Html.DisplayFor(model => model.spaceRequirement)</td>
+                        </tr>
+                        <tr>
                             <td class="fw-bold">@Html.DisplayNameFor(model => model.SecurityRequirement)</td>
                             <td>@Html.DisplayFor(model => model.SecurityRequirement)</td>
                         </tr>
