--- a/Dierentuin42/Views/Animals/Details.cshtml
+++ b/Dierentuin42/Views/Animals/Details.cshtml
@@ -53,6 +53,10 @@
                             <td>@Html.DisplayFor(model => model.Enclosure.Name)</td>
                         </tr>
                         <tr>
+                            <td class="fw-bold">@Html.DisplayNameFor(model => model.spaceRequirement)</td>
+                            <td>@Html.DisplayFor(model => model.spaceRequirement)</td>
+                        </tr>
+                        <tr>
                             <td class="fw-bold">@Html.DisplayNameFor(model => model.SecurityRequirement)</td>
                             <td>@Html.DisplayFor(model => model.SecurityRequirement)</td>
                         </tr>
