--- a/Dierentuin42/Views/Animals/Edit.cshtml
+++ b/Dierentuin42/Views/Animals/Edit.cshtml
@@ -90,6 +90,14 @@
                         </select>
                     </div>
 
+                    <!-- RUIMTEVEREISTEN -->
+                    <div class="form-group">
+                        <label asp-for="spaceRequirement" class="control-label"></label>
+                        <input asp-for="spaceRequirement" class="form-control" type="number" step="0.01" />
+                        <span asp-validation-for="spaceRequirement" class="text-danger"></span>
+                    </div>
+
+
                     <!-- BEVEILIGINGVEREISTEN -->
                     <div class="form-group">
                         <label asp-for="SecurityRequirement" class="control-label"></label>
@@ -103,6 +111,7 @@
                     </div>
 
                     <hr class="my-3" style="border: 0; border-top: 3px solid #ffcc00; margin: 5px 0;" />
+
 
                     <!-- OPSLAAN KNOP EN TERUG OVERZICHT -->
                     
